United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6988303 6986046 breaks build with recent gcc
6988303 : 6986046 breaks build with recent gcc

Details
Type:
Bug
Submit Date:
2010-09-29
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
src/share/vm/c1/c1_Instruction.hpp:
 
-  Instruction(ValueType* type, bool type_is_constant = false, bool create_hi = true)
-  : _bci(-99)
-  , _use_count(0)
+  Instruction(ValueType* type, ValueStack* state_before = NULL, bool type_is_constant = false, bool create_hi = true)
+  : _use_count(0)
 
breaks:
 
1965 LEAF(OsrEntry, Instruction)
1966  public:
1967   // creation
1968 #ifdef _LP64
1969   OsrEntry() : Instruction(longType, false) { pin(); }
1970 #else
1971   OsrEntry() : Instruction(intType,  false) { pin(); }
1972 #endif
 
and:
 
1983   ExceptionObject() : Instruction(objectType, false) {
 
Unfortunately only a very new GCC (gcc version 4.5.1 (Ubuntu
4.4.1-4ubuntu9)) complains about the error:
 
src/share/vm/c1/c1_Instruction.hpp: In constructor ???OsrEntry::OsrEntry()???:
src/share/vm/c1/c1_Instruction.hpp:1971:43: error: converting ???false??? to pointer type for argument 2 of ???Instruction::Instruction(ValueType*, ValueStack*, bool, bool)???

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/ad0638ff8ea4
                                     
2010-10-09
EVALUATION

see description
                                     
2010-09-29
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/ad0638ff8ea4
                                     
2010-09-29



Hardware and Software, Engineered to Work Together