6988303: 6986046 breaks build with recent gcc

Fixes build break

Reviewed-by: never, kvn